# claude-gemini-bridge

./: .env.example  .gitignore  .mcp.json  BRANCH_INTEGRATION_ANALYSIS.md  BUGS_FOUND.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN_IMPROVEMENTS.md  GEMINI_CLI_BACKEND_PLAN.md  LICENSE  MAESTRO_IMPLEMENTATION_PLAN.md  PERFORMANCE_ANALYSIS.md  README.md  component.md  dashboard.md  gece_kusu_landing.html  gece_kusu_neon.html  gece_kusu_wellfood.html  gemini_mcp_analysis.md  maestro.md  prompt.md  pyproject.toml  run-mcp.sh  tema-rehberi.md
.gemini/: maestro_preferences.json
.serena/: project.yml
.serena/memories/: kobi_bugs.md  kobi_final_report.md  kobi_test_plan.md
docs/: TEST_RESULTS_20251225.md
docs/maestro/: api_reference.md  question_flow.md
examples/: 01-modern-minimal.html  02-brutalist.html  03-glassmorphism.html  04-neo-brutalism.html  05-soft-ui.html  06-corporate.html  07-gradient.html  08-cyberpunk.html  09-retro.html  10-pastel.html  demo_all_features.py  demo_output.html  hero-ai-saas.html  login-page.html  mcp-config.json.example  zaman_yolculugu_hero.html  zekai-landing-page.html
src/gemini_mcp/: __init__.py  auth.py  cache.py  client.py  config.py  context_cache.py  design_system.py  error_recovery.py  few_shot_examples.py  js_fallbacks.py  (+10 more)
tests/: __init__.py  conftest.py  test_creativity_enhancements.py  test_e2e_trifecta.py  test_maestro_decision.py  test_maestro_v2_e2e.py  test_maestro_v2_integration.py  test_performance_fixes.py  test_phase1_gaps.py  test_phase2_validation.py  test_phase3_performance.py  test_phase4_ux.py  test_prompt_optimization.py
(+154 files in other folders)
