[project]
name = "claude-gemini-bridge"
version = "0.1.0"
description = "Claude Code icin tasarim odakli MCP sunucusu - Gemini 3 ile frontend UI/UX tasarimi ve gorsel uretim"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Serkan Ozdogan" }
]
keywords = [
    "mcp",
    "gemini",
    "claude",
    "vertex-ai",
    "google-cloud",
    "ai",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "google-genai>=1.0.0",
    "google-auth>=2.0.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",  # Dynamic prompt templating
]

[project.urls]
Homepage = "https://github.com/archolet/claude-gemini-bridge"
Repository = "https://github.com/archolet/claude-gemini-bridge"
Issues = "https://github.com/archolet/claude-gemini-bridge/issues"

[project.scripts]
gemini-mcp = "gemini_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gemini_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
